# FastAPI_project

./: Dockerfile  alembic.ini  database.py  docker-compose.yml  main.py  models.py  myapi.db  pyproject.toml
domain/question/: question_router.py  question_schema.py
domain/todo/: todo_crud.py  todo_router.py  todo_schema.py
frontend/: .env  package-lock.json
frontend/src/: App.svelte  main.js
frontend/src/components/: Weather.svelte
frontend/src/lib/: api.js
frontend/src/routes/: Detail.svelte  Home.svelte  Todo.svelte  TodoCreate.svelte
migrations/versions/: b2c640b9c0ce_.py
